package integration

import (
	"encoding/json"
	"fmt"
	"testing"
	"time"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"
)

// Basic test to verify API server concepts without complex dependencies
func TestAPIServerBasicConcepts(t *testing.T) {
	t.Run("Test JSON Response Format", func(t *testing.T) {
		// Test the expected JSON response format for insights
		expectedResponse := map[string]interface{}{
			"using_correlation": true,
			"insights": []map[string]interface{}{
				{
					"id":          "test-insight-1",
					"resource":    "api-service",
					"namespace":   "default",
					"type":        "prediction",
					"severity":    "high",
					"title":       "Memory leak detected",
					"description": "API service showing memory growth pattern",
					"prediction": map[string]interface{}{
						"type":        "oom",
						"probability": 0.85,
						"time_window": "7 minutes",
						"description": "Pod will OOM in 7 minutes",
					},
					"actionable_items": []map[string]interface{}{
						{
							"type":         "kubectl",
							"description":  "Increase memory limit",
							"command":      "kubectl patch deployment...",
							"safety_level": "medium",
						},
					},
				},
			},
		}

		// Verify JSON structure
		jsonData, err := json.Marshal(expectedResponse)
		require.NoError(t, err)

		var parsed map[string]interface{}
		err = json.Unmarshal(jsonData, &parsed)
		require.NoError(t, err)

		// Verify key fields
		assert.Equal(t, true, parsed["using_correlation"])

		insights := parsed["insights"].([]interface{})
		assert.Len(t, insights, 1)

		insight := insights[0].(map[string]interface{})
		assert.Equal(t, "api-service", insight["resource"])
		assert.Equal(t, "high", insight["severity"])

		prediction := insight["prediction"].(map[string]interface{})
		assert.Equal(t, "oom", prediction["type"])
		assert.Equal(t, 0.85, prediction["probability"])
	})

	t.Run("Test HTTP Request/Response Pattern", func(t *testing.T) {
		// Test that we can construct proper HTTP requests
		fixRequest := map[string]interface{}{
			"resource":   "api-service",
			"namespace":  "default",
			"fix_type":   "memory_limit",
			"auto_apply": false,
			"dry_run":    true,
		}

		jsonData, err := json.Marshal(fixRequest)
		require.NoError(t, err)

		// Verify we can create a proper request
		assert.Contains(t, string(jsonData), "api-service")
		assert.Contains(t, string(jsonData), "memory_limit")
		assert.Contains(t, string(jsonData), "dry_run")

		// Test response parsing
		expectedResponse := map[string]interface{}{
			"status":   "dry_run",
			"commands": []string{"kubectl patch deployment..."},
			"preview":  "Memory limit would be increased to 512Mi",
		}

		responseData, err := json.Marshal(expectedResponse)
		require.NoError(t, err)

		var parsedResponse map[string]interface{}
		err = json.Unmarshal(responseData, &parsedResponse)
		require.NoError(t, err)

		assert.Equal(t, "dry_run", parsedResponse["status"])
		assert.NotNil(t, parsedResponse["commands"])
	})

	t.Run("Test API Endpoint Patterns", func(t *testing.T) {
		// Test that our API endpoints follow REST conventions
		endpoints := []string{
			"/api/v1/insights/default/api-service",
			"/api/v1/predictions/default/api-service",
			"/api/v1/fixes/default/api-service",
			"/api/v1/flows/default/api-service",
			"/api/v1/cluster/overview",
		}

		for _, endpoint := range endpoints {
			// Verify endpoint structure
			assert.Contains(t, endpoint, "/api/v1/")
			if endpoint != "/api/v1/cluster/overview" {
				assert.Contains(t, endpoint, "default")
			}
		}
	})

	t.Run("Test Correlation Engine Data Flow", func(t *testing.T) {
		// Test the data structures that flow through the correlation engine
		event := map[string]interface{}{
			"id":        "test-event-1",
			"type":      "pod_restart",
			"resource":  "api-service-xyz",
			"namespace": "default",
			"timestamp": time.Now().Unix(),
			"data": map[string]interface{}{
				"restart_count": 5,
				"exit_code":     137,
				"reason":        "OOMKilled",
			},
		}

		// Verify event structure
		assert.Equal(t, "pod_restart", event["type"])
		assert.Equal(t, "api-service-xyz", event["resource"])
		assert.Equal(t, "default", event["namespace"])

		eventData := event["data"].(map[string]interface{})
		assert.Equal(t, 5, eventData["restart_count"])
		assert.Equal(t, 137, eventData["exit_code"])
		assert.Equal(t, "OOMKilled", eventData["reason"])
	})

	t.Run("Test L7 Protocol Data Structures", func(t *testing.T) {
		// Test HTTP flow structure
		httpFlow := map[string]interface{}{
			"id":      "flow-1",
			"latency": 150,
			"request": map[string]interface{}{
				"method": "GET",
				"path":   "/api/users",
				"headers": map[string]string{
					"Host":       "example.com",
					"User-Agent": "test-client",
				},
			},
			"response": map[string]interface{}{
				"status": 200,
				"headers": map[string]string{
					"Content-Type": "application/json",
				},
			},
			"anomalies": []string{},
		}

		// Verify HTTP flow structure
		assert.Equal(t, "flow-1", httpFlow["id"])
		assert.Equal(t, 150, httpFlow["latency"])

		request := httpFlow["request"].(map[string]interface{})
		assert.Equal(t, "GET", request["method"])
		assert.Equal(t, "/api/users", request["path"])

		response := httpFlow["response"].(map[string]interface{})
		assert.Equal(t, 200, response["status"])

		// Test gRPC flow structure
		grpcFlow := map[string]interface{}{
			"id":      "grpc-flow-1",
			"service": "UserService",
			"method":  "GetUser",
			"type":    "unary",
			"status":  "OK",
			"latency": 45,
		}

		assert.Equal(t, "UserService", grpcFlow["service"])
		assert.Equal(t, "GetUser", grpcFlow["method"])
		assert.Equal(t, "unary", grpcFlow["type"])

		// Test Kafka flow structure
		kafkaFlow := map[string]interface{}{
			"id":        "kafka-flow-1",
			"topic":     "user-events",
			"partition": 0,
			"offset":    12345,
			"operation": "produce",
			"key":       "user-123",
		}

		assert.Equal(t, "user-events", kafkaFlow["topic"])
		assert.Equal(t, 0, kafkaFlow["partition"])
		assert.Equal(t, "produce", kafkaFlow["operation"])
	})

	t.Run("Test Connection Patterns", func(t *testing.T) {
		// Test direct in-memory connection pattern
		directConnection := map[string]interface{}{
			"type":          "direct",
			"latency":       "<1ms",
			"overhead":      "none",
			"shared_memory": true,
		}

		assert.Equal(t, "direct", directConnection["type"])
		assert.Equal(t, "<1ms", directConnection["latency"])
		assert.Equal(t, true, directConnection["shared_memory"])

		// Test gRPC connection pattern
		grpcConnection := map[string]interface{}{
			"type":     "grpc",
			"latency":  "1-5ms",
			"overhead": "network",
			"scalable": true,
		}

		assert.Equal(t, "grpc", grpcConnection["type"])
		assert.Equal(t, "1-5ms", grpcConnection["latency"])
		assert.Equal(t, true, grpcConnection["scalable"])
	})
}

func TestCorrelationEngineDataFlow(t *testing.T) {
	t.Run("Test Event Processing Pipeline", func(t *testing.T) {
		// Create a series of events that should correlate
		events := []map[string]interface{}{
			{
				"id":        "event-1",
				"type":      "memory_usage",
				"resource":  "api-service",
				"namespace": "default",
				"timestamp": time.Now().Unix(),
				"data": map[string]interface{}{
					"usage_percent": 85.0,
					"trend":         "increasing",
				},
			},
			{
				"id":        "event-2",
				"type":      "pod_restart",
				"resource":  "api-service",
				"namespace": "default",
				"timestamp": time.Now().Unix(),
				"data": map[string]interface{}{
					"restart_count": 3,
					"reason":        "OOMKilled",
				},
			},
			{
				"id":        "event-3",
				"type":      "response_time",
				"resource":  "api-service",
				"namespace": "default",
				"timestamp": time.Now().Unix(),
				"data": map[string]interface{}{
					"avg_latency": 2500.0,
					"p95_latency": 5000.0,
				},
			},
		}

		// Verify event correlation potential
		resourceEvents := make(map[string][]map[string]interface{})
		for _, event := range events {
			resource := event["resource"].(string)
			resourceEvents[resource] = append(resourceEvents[resource], event)
		}

		// Should have all events for api-service
		apiServiceEvents := resourceEvents["api-service"]
		assert.Len(t, apiServiceEvents, 3)

		// Verify we have the right event types for correlation
		eventTypes := make(map[string]bool)
		for _, event := range apiServiceEvents {
			eventTypes[event["type"].(string)] = true
		}

		assert.True(t, eventTypes["memory_usage"])
		assert.True(t, eventTypes["pod_restart"])
		assert.True(t, eventTypes["response_time"])

		// This combination should trigger OOM prediction
		hasMemoryIssue := eventTypes["memory_usage"]
		hasRestartIssue := eventTypes["pod_restart"]
		hasPerformanceIssue := eventTypes["response_time"]

		shouldPredictOOM := hasMemoryIssue && hasRestartIssue && hasPerformanceIssue
		assert.True(t, shouldPredictOOM)
	})

	t.Run("Test Prediction Generation", func(t *testing.T) {
		// Test the structure of generated predictions
		prediction := map[string]interface{}{
			"type":        "oom",
			"probability": 0.87,
			"time_window": "6 minutes",
			"description": "Pod will OOM in 6 minutes due to memory leak",
			"confidence":  "high",
			"factors": []string{
				"Increasing memory usage (85%)",
				"Recent OOM kills (3 restarts)",
				"Degraded performance (2.5s avg latency)",
			},
		}

		// Verify prediction structure
		assert.Equal(t, "oom", prediction["type"])
		assert.Greater(t, prediction["probability"], 0.8)
		assert.Equal(t, "high", prediction["confidence"])

		factors := prediction["factors"].([]string)
		assert.Len(t, factors, 3)
		assert.Contains(t, factors[0], "memory usage")
		assert.Contains(t, factors[1], "OOM kills")
		assert.Contains(t, factors[2], "performance")
	})

	t.Run("Test Actionable Item Generation", func(t *testing.T) {
		// Test the structure of actionable items
		actionableItems := []map[string]interface{}{
			{
				"type":         "kubectl",
				"description":  "Increase memory limit to 512Mi",
				"command":      "kubectl patch deployment api-service -p '{\"spec\":{\"template\":{\"spec\":{\"containers\":[{\"name\":\"api\",\"resources\":{\"limits\":{\"memory\":\"512Mi\"}}}]}}}}'",
				"safety_level": "medium",
				"impact":       "Prevents OOM but increases resource usage",
			},
			{
				"type":         "investigation",
				"description":  "Check for memory leaks in application",
				"command":      "kubectl logs api-service-xyz | grep -i memory",
				"safety_level": "high",
				"impact":       "Identifies root cause",
			},
		}

		// Verify actionable items structure
		assert.Len(t, actionableItems, 2)

		kubectlAction := actionableItems[0]
		assert.Equal(t, "kubectl", kubectlAction["type"])
		assert.Equal(t, "medium", kubectlAction["safety_level"])
		assert.Contains(t, kubectlAction["command"], "kubectl patch")

		investigationAction := actionableItems[1]
		assert.Equal(t, "investigation", investigationAction["type"])
		assert.Equal(t, "high", investigationAction["safety_level"])
		assert.Contains(t, investigationAction["command"], "kubectl logs")
	})
}

func TestCLIIntegrationPatterns(t *testing.T) {
	t.Run("Test CLI Command Output Format", func(t *testing.T) {
		// Test the expected CLI output format
		expectedOutput := `
🔍 ANALYSIS: api-service has issues

pod/api-service-xyz: High restart count
  Container restarted 3 times in last hour
  Pattern: Consistent OOMKilled events
  
  Likely cause: Memory limit (256Mi) too low
  
  🔮 PREDICTIONS:
     → Pod will OOM in 6 minutes due to memory leak
  
  💡 ACTIONABLE ITEMS:
     → Increase memory limit: kubectl patch deployment...
     → Check logs: kubectl logs api-service-xyz --previous
  
  ✅ Using advanced correlation analysis`

		// Verify output contains expected sections
		assert.Contains(t, expectedOutput, "🔍 ANALYSIS:")
		assert.Contains(t, expectedOutput, "🔮 PREDICTIONS:")
		assert.Contains(t, expectedOutput, "💡 ACTIONABLE ITEMS:")
		assert.Contains(t, expectedOutput, "✅ Using advanced correlation analysis")
	})

	t.Run("Test CLI Fallback Behavior", func(t *testing.T) {
		// Test the fallback when correlation server unavailable
		fallbackOutput := `
🔍 ANALYSIS: api-service status

pod/api-service-xyz: High memory usage
  Memory usage: 85.0%
  
  ⚠️  WARNINGS:
     → High memory usage: 85.0%
     → High restart count: 3 restarts in last hour
  
  🔮 PREDICTIONS (local analysis):
     → Pod may OOM in approximately 10 minutes
  
  ⚡ Using local analysis (correlation server unavailable)`

		// Verify fallback output
		assert.Contains(t, fallbackOutput, "⚠️  WARNINGS:")
		assert.Contains(t, fallbackOutput, "🔮 PREDICTIONS (local analysis):")
		assert.Contains(t, fallbackOutput, "⚡ Using local analysis")
	})
}

func BenchmarkDataStructures(b *testing.B) {
	b.Run("JSON Marshaling", func(b *testing.B) {
		insight := map[string]interface{}{
			"id":          "test-insight",
			"resource":    "api-service",
			"namespace":   "default",
			"type":        "prediction",
			"severity":    "high",
			"title":       "Memory leak detected",
			"description": "API service showing memory growth pattern",
			"timestamp":   time.Now().Unix(),
		}

		b.ResetTimer()

		for i := 0; i < b.N; i++ {
			_, err := json.Marshal(insight)
			if err != nil {
				b.Fatal(err)
			}
		}
	})

	b.Run("Event Processing", func(b *testing.B) {
		events := make([]map[string]interface{}, 1000)
		for i := 0; i < 1000; i++ {
			events[i] = map[string]interface{}{
				"id":        fmt.Sprintf("event-%d", i),
				"type":      "memory_usage",
				"resource":  "api-service",
				"namespace": "default",
				"timestamp": time.Now().Unix(),
				"data": map[string]interface{}{
					"usage_percent": 80.0 + float64(i%20),
				},
			}
		}

		b.ResetTimer()

		for i := 0; i < b.N; i++ {
			// Simulate event processing
			resourceEvents := make(map[string][]map[string]interface{})
			for _, event := range events {
				resource := event["resource"].(string)
				resourceEvents[resource] = append(resourceEvents[resource], event)
			}
		}
	})
}
